# python-accessor

./: LICENSE  README.md  pyproject.toml  setup.py
accessor/: __init__.py
tests/: test.py  test_edge_cases.py  test_performance.py
